# hw5

./: CMakeLists.txt  README.md  get_matrices.sh  run.sh
include/: CSR.hpp  colors.h  spmm.cuh  utils.cuh
matrices/: n16.mtx
tests/: test_common.h  test_spmm.cu
